--- a/sites/changelog/changelog.html
+++ b/sites/changelog/changelog.html
@@ -40,6 +40,12 @@
                             <span class="link">Announcements</span>
                         </a>
                     </li>
+                    <li class="list">
+                        <a href="./../about/about.html" class="nav-link">
+                            <i class="bx bx-info-circle icon"></i>
+                            <span class="link">About Us</span>
+                        </a>
+                    </li>
                     
                 </ul>
             </div>
