--- a/sites/about/about.html
+++ b/sites/about/about.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="list">
-                        <a href="./announcements.html" class="nav-link">
+                        <a href="./../announcements/announcements.html" class="nav-link">
                             <i class="bx bx-bell icon"></i>
                             <span class="link">Announcements</span>
                         </a>
