--- a/sites/about/about.html
+++ b/sites/about/about.html
@@ -85,9 +85,7 @@
 
     
     </center>
-    <section class="overlay"></section>
-
-    <t class="impress"><a href="./../impress/impress.html" class="link" style="color: white;">Impress</a> - ©2022 | AdiayX</t>
+    <section class="overlay"></section
     </body>
 </html>
 
