--- a/sites/changelog/changelog.html
+++ b/sites/changelog/changelog.html
@@ -54,6 +54,9 @@
     <section class="overlay"></section>
     <section id="main">
         <div class="log">
+            <t class="logname">WebBuild #2 <t class="date"><u>30.10.2022</u></t></t><br><t class="description">Published the Bot Website v1.0.3</t>
+        </div>
+        <div class="log">
             <t class="logname">WebBuild #1 <t class="date"><u>30.10.2022</u></t></t><br><t class="description">Published the Bot Website v1.0.0</t>
         </div>
         <div class="log">
