--- a/sites/about/about.html
+++ b/sites/about/about.html
@@ -46,7 +46,7 @@
                             <span class="link">About Us</span>
                         </a>
                     </li>
-                    
+                    <t class="impress"><a href="./../impress/impress.html" class="link" style="color: white;">Impress</a> - ©2022 | AdiayX</t>
                 </ul>
             </div>
         </nav>
