--- a/sites/about/about.html
+++ b/sites/about/about.html
@@ -75,9 +75,8 @@
             <div class="card">
                 <div class="name">TreeBot#7588</div>
                 <div class="socials">
-                    <a style="color: white; font-size: 20px;" class="symbol" href=""><i class="bx bxl-discord-alt icon"></i></a>
-                    <a style="color: white; font-size: 20px;" class="symbol" href=""><i class="bx bxl-github icon"></i></a>
-                    <a style="color: white; font-size: 20px;" class="symbol" href=""><i class="bx bx-globe icon"></i></a>
+                    <a style="color: white; font-size: 20px;" class="symbol" href="https://discord.gg/zGnrxhe3Pf"><i class="bx bxl-discord-alt icon"></i></a>
+                    <a style="color: white; font-size: 20px;" class="symbol" href="https://github.com/TreeBoot"><i class="bx bxl-github icon"></i></a>
                 </div><br><br>
                 <div class="roles"><t class="role">Site Moderator</t> <t class="role">Site Developer</t><t class="role">Moderator</t></div>
             </div>
