--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <center>
             <t class="title">AdiayX Bot</t><br>
             <t class="description">A Bot that pushes up your Server</t><br><br>
-            <a class="a_inv_btn" target="_blank" href="https://canary.discord.com/api/oauth2/authorize?client_id=1018268379552952331&permissions=8&scope=bot"><button class="inv_btn">Invite</button></a><br><a class="a_sup_btn" target="_blank" href=""><button class="sup_btn">Support</button></a><a class="a_cmd_btn" href="#Commands"><button class="cmd_btn">Commands</button></a>
+            <a class="a_inv_btn" target="_blank" href="https://canary.discord.com/api/oauth2/authorize?client_id=1018268379552952331&permissions=8&scope=bot"><button class="inv_btn">Invite</button></a><br><a class="a_sup_btn" target="_blank" href="https://discord.gg/y95F2Pxu6q"><button class="sup_btn">Support</button></a><a class="a_cmd_btn" href="#Commands"><button class="cmd_btn">Commands</button></a>
         </center>
     </div>
 
