--- a/sites/impress/impress.html
+++ b/sites/impress/impress.html
@@ -14,7 +14,8 @@
         <t1>Adrian Dorbez</t1><br>
         <t1>dorbez.ad@gmail.com</t1><br>
         <t1>Lorystraße 128</t1><br>
-        <t1>1110 Wien, Österreich</t1><br>
+        <t1>1110 Wien, Österreich</t1><br><br><br>
+        <t1>We Use Google Fonts. The privacy policy of <a href="https://policies.google.com/privacy?hl=en">Google Fonts</a> applies!</t1>
     </div>
     </center>
 </body>
